@startuml UserERD

title User Related Mongo Collections

hide circle
skinparam linetype ortho
skinparam class {
  BackgroundColor #ffffff
  BorderColor #222222
  ArrowColor #222222
}

entity "users" as users {
  * _id : ObjectId
  --
  * email : string <<unique>>
  * username : string <<unique>>
  * passwordHash : string
  imageExt : string
  phone : string
  dob : date
  * createdAt : date
  * updatedAt : date
  deletedAt : date
}

entity "userAddresses" as userAddresses {
  * _id : ObjectId
  --
  * userId : ObjectId <<index>>
  * countryId : ObjectId
  label : string
  * city : string
  * postalCode : string
  * line1 : string
  line2 : string
  * createdAt : date
  * updatedAt : date
  deletedAt : date
}

entity "countries" as countries {
  * _id : ObjectId
  --
  * iso2 : string <<unique>>
  * iso3 : string <<unique>>
  * name : string <<unique>>
  * createdAt : date
  * updatedAt : date
  deletedAt : date
}

entity "refreshTokens" as refreshTokens {
  * _id : ObjectId
  --
  * userId : ObjectId <<index>>
  * tokenHash : string <<unique>>
  * expiresAt : date <<ttl>>
  revokedAt : date
  replacedByTokenId : ObjectId
  * createdAt : date
  * updatedAt : date
  deletedAt : date
}

users ||--o{ userAddresses : has
countries ||--o{ userAddresses : used_by
users ||--o{ refreshTokens : owns

@enduml
